--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2709,15 +2709,15 @@ input, select, textarea {
 		transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
 		background-color: #A09EA6;
 		color: #FFFFFF;
-		position: absolute;
-		width: 64em;
+		position: fixed;
+		width: 60em;
 		max-width: calc(100% - 4em);
 		padding: 1em;
 		background-color: #4F4F4F;
 		border-top-left-radius: 0.25em;
 		border-top-right-radius: 0.25em;
 		cursor: default;
-		text-align: center;
+		text-align: left;
 	}
 
 		#nav input, #nav select, #nav textarea {
