--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2710,7 +2710,7 @@ input, select, textarea {
 		background-color: #A09EA6;
 		color: #FFFFFF;
 		position: fixed;
-		width: 60em;
+		width: 64em;
 		max-width: calc(100% - 4em);
 		padding: 1em;
 		background-color: #4F4F4F;
@@ -2780,7 +2780,7 @@ input, select, textarea {
 					line-height: 2.25em;
 					padding: 0 1.25em;
 					border: 0;
-					border-radius: 8px;
+					border-radius: 0;
 					box-shadow: inset 0 0 0 1px transparent;
 				}
 
