--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2714,8 +2714,6 @@ input, select, textarea {
 		max-width: calc(100% - 4em);
 		padding: 1em;
 		background-color: #4F4F4F;
-		border-top-left-radius: 0.25em;
-		border-top-right-radius: 0.25em;
 		cursor: default;
 		text-align: left;
 	}
@@ -2768,6 +2766,7 @@ input, select, textarea {
 				margin: 0 0.35em;
 				padding: 0;
 				vertical-align: middle;
+				list-style:none
 			}
 
 				#nav ul li a {
