--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2713,6 +2713,8 @@ input, select, textarea {
 		width: 100%;
 		padding: 1em;
 		background-color: #4F4F4F;
+		border-top-left-radius: 0.25em;
+		border-top-right-radius: 0.25em;
 		cursor: default;
 		text-align: left;
 	}
