--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2711,7 +2711,7 @@ input, select, textarea {
 		color: #FFFFFF;
 		position: fixed;
 		width: 100%;
-		height: 80em;
+		height: 5%;
 		padding: 1em;
 		background-color: #4F4F4F;
 		border-top-left-radius: 0.25em;
