--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2715,6 +2715,7 @@ input, select, textarea {
 		padding: 1em;
 		overflow: hidden;
 		background-color: #4F4F4F;
+		z-index: 300;
 		border-top-left-radius: 0.25em;
 		border-top-right-radius: 0.25em;
 		cursor: default;
