--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
-	padding-top: 65px;
+	/* padding-top: 65px; */
 }
 
 ol, ul {
