--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,22 +91,26 @@ input, select, textarea {
 	}
 
 	html {
+		background: url(images/IMG_6923.jpg) no-repeat center center fixed;
+		-webkit-background-size: cover;
+  		-moz-background-size: cover;
+  		-o-background-size: cover;
+  		background-size: cover;
 		box-sizing: border-box;
-	}
 
 	*, *:before, *:after {
 		box-sizing: inherit;
 	}
 
 	body {
-		/* background-color: #2e3141; */
+		/* background-color: #2e3141;
 		background-image: url("../../images/IMG_6923.jpg");
-		background-size: cover,
+		background-size: auto,
  cover;
 		background-attachment: fixed,
  fixed;
 		background-position: center,
- center;
+ center; */
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
