--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,13 +92,15 @@ input, select, textarea {
 
 	html {
 		box-sizing: border-box;
+	}
 
 	*, *:before, *:after {
 		box-sizing: inherit;
 	}
 
 	body {
-		/* background-color: #2e3141; */
+		/* background-color: #2e3141;
+		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg"); */
 		background-image: url("../../images/IMG_6923.jpg");
 		background-size: cover,
  cover;
