--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,9 +99,9 @@ input, select, textarea {
 	}
 
 	body {
-		/* background-color: #2e3141;
-		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/IMG_6923.jpg"); */
-		background-image: url("../../images/IMG_6923.jpg");
+		/* background-color: #2e3141; */
+		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/IMG_6923.jpg");
+		/* background-image: url("../../images/IMG_6923.jpg"); */
 		background-size: cover,
  cover;
 		background-attachment: fixed,
