--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3462,7 +3462,7 @@ input, select, textarea {
 			text-transform: uppercase;
 		}
 		
-		#banner icons {
+		#banner .icons {
 			-moz-transition: opacity 0.5s ease, -moz-transform 0.5s ease, -moz-filter 0.25s ease;
 			-webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease, -webkit-filter 0.25s ease;
 			-ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease, -ms-filter 0.25s ease;
@@ -3567,7 +3567,7 @@ input, select, textarea {
 			filter: blur(2px);
 		}
 	
-		body.is-preload #banner icons {
+		body.is-preload #banner .icons {
 			opacity: 0;
 			-moz-transform: translateX(0.5em);
 			-webkit-transform: translateX(0.5em);
