--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4070,9 +4070,9 @@ input, select, textarea {
 	@media screen and (max-width: 1280px) {
 
 		#footer {
-			background-color: #2e3141;
-			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
-			background-size: auto,
+			/* background-color: #2e3141; */
+			background-image: url("../../images/IMG_6923.jpg"), url("../../images/IMG_6923.jpg");
+			background-size: cover,
  cover;
 			background-position: center,
  center;
