--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4067,7 +4067,7 @@ input, select, textarea {
 		}
 
 		#footer .inner .copyright {
-			border-top: solid 2px rgba(255, 255, 255);
+			border-top: solid 2px rgba(255, 255, 255, .525);
 			list-style: none;
 			margin: 4em 0 2em 0;
 			padding: 2em 0 0 0;
@@ -4075,8 +4075,8 @@ input, select, textarea {
 		}
 
 			#footer .inner .copyright li {
-				border-left: solid 2px rgba(255, 255, 255);
-				color: rgba(255, 255, 255, 0.35);
+				border-left: solid 2px rgba(255, 255, 255, .525);
+				color: rgba(255, 255, 255);
 				display: inline-block;
 				font-size: 0.9em;
 				line-height: 1;
