--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3605,9 +3605,9 @@ input, select, textarea {
 
 		#wrapper > header {
 			padding: 9em 0 6.25em 0 ;
-			background-color: #2e3141;
-			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
-			background-size: auto,
+			/* background-color: #2e3141; */
+			background-image: url("../../images/IMG_6934.jpg"), url("../../images/IMG_6934.jpg");
+			background-size: cover,
  cover;
 			background-position: center,
  0% 30%;
