--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2212,7 +2212,7 @@ input, select, textarea {
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #5b6ba6;
+			border-color: #4b4b65;
 		}
 
 	select {
