--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2922,7 +2922,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #53639e;
+				background-color: #4b4b65;
 			}
 
 			input[type="submit"].primary:active,
