--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3337,7 +3337,7 @@ input, select, textarea {
 				}
 
 					#menu .links li a:hover {
-						background: #4b4b65;
+						background: #616182;
 					}
 
 		@media screen and (max-width: 736px) {
