--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3856,7 +3856,7 @@ input, select, textarea {
 			}
 
 			.wrapper.spotlight.style2 {
-				background-color: #4b4b65;
+				background-color: #616182;
 			}
 
 				.wrapper.spotlight.style2:before, .wrapper.spotlight.style2:after {
@@ -3864,15 +3864,15 @@ input, select, textarea {
 				}
 
 				.wrapper.spotlight.style2:before {
-					box-shadow: inset 0 -1px 0 0 #4b4b65, 0 1px 0 0 #4b4b65;
+					box-shadow: inset 0 -1px 0 0 #616182, 0 1px 0 0 #616182;
 				}
 
 				.wrapper.spotlight.style2:after {
-					box-shadow: inset 0 -1px 0 0 #4b4b65, 0 1px 0 0 #4b4b65;
+					box-shadow: inset 0 -1px 0 0 #616182, 0 1px 0 0 #616182;
 				}
 
 			.wrapper.spotlight.style3 {
-				background-color: #4b4b65;
+				background-color: #404056;
 			}
 
 				.wrapper.spotlight.style3:before, .wrapper.spotlight.style3:after {
@@ -3880,11 +3880,11 @@ input, select, textarea {
 				}
 
 				.wrapper.spotlight.style3:before {
-					box-shadow: inset 0 -1px 0 0 #4b4b65, 0 1px 0 0 #4b4b65;
+					box-shadow: inset 0 -1px 0 0 #404056, 0 1px 0 0 #404056;
 				}
 
 				.wrapper.spotlight.style3:after {
-					box-shadow: inset 0 -1px 0 0 #4b4b65, 0 1px 0 0 #4b4b65;
+					box-shadow: inset 0 -1px 0 0 #404056, 0 1px 0 0 #404056;
 				}
 
 			.wrapper.spotlight.style4 {
