--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3401,7 +3401,7 @@ input, select, textarea {
 
 			#banner .logo .icon {
 				border-radius: 100%;
-				border: solid 2px rgba(255, 255, 255, 0.125);
+				border: solid 2px rgba(64, 64, 86, 0.125);
 				cursor: default;
 				display: inline-block;
 				font-size: 2em;
@@ -3429,8 +3429,9 @@ input, select, textarea {
 			-ms-filter: blur(0);
 			filter: blur(0);
 			opacity: 1;
-			border-bottom: solid 2px rgba(255, 255, 255, 0.525);
+			border-bottom: solid 2px rgba(64, 64, 86, 0.525);
 			font-size: 2.25em;
+			font-color: #404056;
 			margin-bottom: 0.8em;
 			padding-bottom: 0.4em;
 		}
@@ -3454,6 +3455,7 @@ input, select, textarea {
 			filter: blur(0);
 			opacity: 1;
 			font-family: Raleway, Helvetica, sans-serif;
+			font-color: #404056;
 			font-size: 1em;
 			font-weight: 200;
 			letter-spacing: 0.1em;
