--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4087,8 +4087,8 @@ input, select, textarea {
 		}
 
 			#footer .inner .copyright li {
-				border-left: solid 2px rgba(255, 255, 255, .525);
-				color: rgba(255, 255, 255);
+				border-left: solid 2px rgba(64, 64, 86 .525);
+				color: rgba(64, 64, 86);
 				display: inline-block;
 				font-size: 0.9em;
 				line-height: 1;
