--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3655,7 +3655,7 @@ input, select, textarea {
 	}
 
 	.wrapper {
-		background-color: #2e3141;
+		background-color: #4b4b65;
 		margin: 6.5em 0;
 		position: relative;
 	}
