--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4072,7 +4072,7 @@ input, select, textarea {
 		}
 
 		#footer .inner .copyright {
-			border-top: solid 2px rgba(255, 255, 255, .525);
+			border-top: solid 2px rgba(64, 64, 86 .525);
 			list-style: none;
 			margin: 4em 0 2em 0;
 			padding: 2em 0 0 0;
