--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3134,7 +3134,7 @@ input, select, textarea {
 					-ms-transition: background-color 0.2s ease-in-out;
 					transition: background-color 0.2s ease-in-out;
 					border-radius: 5px;
-					box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.125);
+					box-shadow: inset 0 0 0 2px rgba(64, 64, 86, 0.125);
 					padding: 0 1.35em;
 				}
 
@@ -3149,6 +3149,7 @@ input, select, textarea {
 						text-transform: none !important;
 						font-family: 'Font Awesome 5 Free';
 						font-weight: 900;
+						color: #404056;
 					}
 
 					#header nav a[href="#menu"]:before {
